<resources>
    <string name="app_name">Vacinas Online</string>
    <string name="esqueci_min">Esqueci minha senha</string>
    <string name="recuperar_m">Recuperar minha conta</string>
    <string name="voltar">Voltar</string>
    <string name="cadastro">Cadastro</string>
    <string name="lembretes">Lembretes</string>
    <string name="menu_item_o">Quando deseja receber os lembretes</string>
    <string name="menu_item_a">Gostaria de receber lembretes das vacinas?</string>
    <string name="great_you_r">Cadastro concluído com sucesso!</string>
    <string name="great_time_to_start">Ótimo!\n Pronto para começar.</string>
    <string name="what_do_i_d">Excluir conta</string>
    <string name="deleted_account">Conta excluída com sucesso!</string>
    <string name="title_activity_main_menu">Vacinas Online</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teste">teste</string>

    <string name="vacina_no_prazo"><b>No prazo</b>\nEstá na hora de\ntomar.</string>
    <string name="vacina_agendada"><b>Agendadas</b>\nVacinas que já tem\ndata prevista.</string>
    <string name="vacina_recomendada"><b>Recomendada</b>\nVacinas recomendas\nmas sem data fixa.</string>


    <string name="vacina_administrada"><b>Administradas</b>\nVacinas/Dose administradas</string>
    <string name="vacina_anotadas"><b>Anotadas</b>\nVacinas recomendas\nmas sem data fixa.</string>
    <string name="vacina_nao_tomar"><b>Não tomar</b>\nAparece no calendário\nde gestante</string>


    <string name="vacinas_">Vacinas:</string>
    <string name="data_">Data:</string>
    <string name="doses_">Doses:</string>
    <string name="do_you_want">Vacina inserida com sucesso!</string>
    <string name="saiba_mais_">Saiba mais sobre a sua vacina.</string>
    <string name="initial_legend">Legenda de status da vacina:</string>

    <string name="location_1">Centro de Saúde Bairro das Indústrias – <b>Rua Maria de Loudes Manso, 80, Bairro das Indústrias</b> </string>
    <string name="location_2">Centro de Saúde Barreiro – <b>Rua Pinheiro Chagas, 252, Barreiro</b> </string>
    <string name="location_3">Centro de Saúde Barreiro de Cima – <b>Rua Campo Grande, 87 - Araguai</b> </string>
    <string name="location_4">Centro de Saúde Confisco – <b>Rua Aracy Guimarães Rosa, 470 – Confisco</b> </string>

    <string name="location_5">Centro de Saúde Alcides Lins – <b>Rua Panema 275, Concórdia</b> </string>
    <string name="location_6">Centro de Saúde Cachoeirinha – <b>Rua Borborema, 1325, Cachoeirinha</b> </string>
    <string name="location_8">Centro de Saúde Capitão Eduardo – <b>Rua Angela Benaregis, 10 – Capitão Eduardo</b> </string>
    <string name="location_7">Centro de Saúde Cidade Ozanan – <b>Rua Dr. Furtado de Menezes, 610, Ipiranga</b> </string>
    <string name="location_9">Centro de Saúde Efigênia Murta de Figueiredo – <b>Rua Serra do Cipó, 170, Conj. Ribeiro de Abreu</b> </string>
    <string name="location_10">Centro de Saúde Conjunto Paulo VI – <b>Rua da Almas, 122 – Conj Paulo VI</b> </string>
    <string name="location_11">Centro de Saúde Dom Joaquim – <b>Av. Joaquim José Diniz, 200, Fernão Dias</b> </string>
    <string name="location_12">Centro de Saúde Gentil Gomes – <b>Rua Manoel Passos, 580, Santa Cruz.</b> </string>


</resources>
