<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    tools:context=".ReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lembretes"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="27dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-18sp"
            android:text="@string/lembretes"
            android:textAppearance="@style/lembretes" />

        <TextView
            android:id="@+id/menu_item_o"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/menu_item_a"
            android:textAppearance="@style/label_lembrete" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="90dp"
                android:text="Sim" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="60dp"
                android:text="Não" />

        </RadioGroup>

        <TextView
            android:id="@+id/menu_item_a"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/menu_item_o" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="1 dia antes do vencimento" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="3 dia antes do vencimento" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="1 semana antes do vencimento" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="15 dias antes do vencimento" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:text="Continuar"
            android:onClick="sendToSuccessOnCreate"
            android:textAppearance="@style/label_lembrete"
            android:textColor="@color/buttonTextColor" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>